Add create measurements # 3 + module